Bug 598092 - Autocomplete should not remember form values if the submit is stopped due to HTML5 validation. r+a=sicking